fix the overflow of images on mobile devise

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x:hidden;
 }
 
 body {
@@ -171,6 +172,11 @@ a {
 .card-img-right img {
   width: 100%;
   height: 100%;
+}
+.img-1-1 {
+  display:inline-block;
+  max-width: 100%;
+  height: auto;
 }
 
 .img-1-2 {
